Major refactor with helper class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ find_package(CUDA REQUIRED)
 option(BUILD_WITH_PMT "Build with Power Measurement Toolkit support" OFF)
 
 if(BUILD_WITH_PMT)
-find_package(pmt)
-add_compile_definitions("HAVE_PMT")
+  find_package(pmt)
+  add_compile_definitions("HAVE_PMT")
 endif()
 
 file(GLOB CUDA_SOURCES *.cu)
@@ -17,8 +17,9 @@ foreach(source_file ${CUDA_SOURCES})
   get_filename_component(executable_name ${source_file} NAME_WE)
   get_filename_component(kernel_file ${source_file} NAME)
   set(kernel_file ${CMAKE_SOURCE_DIR}/kernels/${kernel_file})
-  cuda_add_executable(${executable_name} ${source_file} ${kernel_file} common.cu)
-  if (BUILD_WITH_PMT)
+  cuda_add_executable(${executable_name} ${source_file} ${kernel_file}
+                      common.cu)
+  if(BUILD_WITH_PMT)
     target_link_libraries(${executable_name} pmt)
   endif()
 endforeach()
