--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,8 @@ list(REMOVE_ITEM CUDA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/common.cu)
 foreach(source_file ${CUDA_SOURCES})
   get_filename_component(executable_name ${source_file} NAME_WE)
   get_filename_component(kernel_file ${source_file} NAME)
-  set(kernel_file ${CMAKE_SOURCE_DIR}/kernels/${kernel_file})
-  cuda_add_executable(${executable_name} ${source_file} ${kernel_file}
+  set(KERNEL_FILE "${CMAKE_SOURCE_DIR}/kernels/${kernel_file}")
+  cuda_add_executable(${executable_name} ${source_file} ${KERNEL_FILE}
                       common.cu)
   if(BUILD_WITH_PMT)
     target_link_libraries(${executable_name} pmt)
