Compile common.cu only once

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,13 +30,16 @@ endif()
 file(GLOB CUDA_SOURCES *.cu)
 list(REMOVE_ITEM CUDA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/common.cu)
 
+add_library(common OBJECT common.cu)
+target_link_libraries(common cxxopts)
+if(BUILD_WITH_PMT)
+  target_link_libraries(common pmt)
+endif()
+
 foreach(source_file ${CUDA_SOURCES})
   get_filename_component(executable_name ${source_file} NAME_WE)
   get_filename_component(kernel_file ${source_file} NAME)
   set(KERNEL_FILE "${CMAKE_SOURCE_DIR}/kernels/${kernel_file}")
-  add_executable(${executable_name} ${source_file} ${KERNEL_FILE} common.cu)
-  target_link_libraries(${executable_name} cxxopts)
-  if(BUILD_WITH_PMT)
-    target_link_libraries(${executable_name} pmt)
-  endif()
+  add_executable(${executable_name} ${source_file} ${KERNEL_FILE})
+  target_link_libraries(${executable_name} common)
 endforeach()
