Integrate Frequency Monitoring Toolkit (FMT)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(cudawrappers)
 
 option(BUILD_WITH_PMT "Build with Power Measurement Toolkit support" OFF)
+option(BUILD_WITH_FMT "Build with Frequency Measurement Toolkit support" OFF)
 option(BUILD_KERNEL_DEBUG "Build CUDA kernels in debug mode")
 
 if(BUILD_WITH_PMT)
@@ -36,6 +37,16 @@ if(BUILD_WITH_PMT)
   add_compile_definitions("HAVE_PMT")
 endif()
 
+if(BUILD_WITH_FMT)
+  set(FMT_BUILD_NVIDIA 1)
+  FetchContent_Declare(
+    fmt
+    GIT_REPOSITORY https://git.astron.nl/RD/fmt
+    GIT_TAG main)
+  FetchContent_MakeAvailable(fmt)
+  add_compile_definitions("HAVE_FMT")
+endif()
+
 file(GLOB CUDA_SOURCES *.cu)
 list(REMOVE_ITEM CUDA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/common.cu)
 
@@ -43,6 +54,9 @@ add_library(common OBJECT common.cpp common.cu)
 target_link_libraries(common cxxopts cudawrappers::cu)
 if(BUILD_WITH_PMT)
   target_link_libraries(common pmt)
+endif()
+if(BUILD_WITH_FMT)
+  target_link_libraries(common fmt cudawrappers::nvml)
 endif()
 
 foreach(source_file ${CUDA_SOURCES})
