Add HIP support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.17)
-project(cudapeak LANGUAGES CXX CUDA)
+project(cudapeak LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_BUILD_TYPE Release)
@@ -7,8 +7,6 @@ set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CUDA_ARCHITECTURES
     "86"
     CACHE STRING "CUDA architecture")
-
-find_package(CUDAToolkit REQUIRED)
 
 include(FetchContent)
 
@@ -18,6 +16,19 @@ FetchContent_Declare(
   GIT_TAG v3.2.0)
 FetchContent_MakeAvailable(cxxopts)
 
+option(BUILD_WITH_PMT "Build with Power Measurement Toolkit support" OFF)
+option(BUILD_WITH_FMT "Build with Frequency Measurement Toolkit support" OFF)
+option(BUILD_KERNEL_DEBUG "Build kernels in debug mode")
+option(BUILD_WITH_HIP "Build with HIP")
+
+if(BUILD_WITH_HIP)
+  set(CUDAWRAPPERS_BACKEND "HIP")
+  enable_language(HIP)
+else()
+  find_package(CUDAToolkit REQUIRED)
+  enable_language(CUDA)
+endif()
+
 include(FetchContent)
 FetchContent_Declare(
   cudawrappers
@@ -25,20 +36,24 @@ FetchContent_Declare(
   GIT_TAG main)
 FetchContent_MakeAvailable(cudawrappers)
 
-option(BUILD_WITH_PMT "Build with Power Measurement Toolkit support" OFF)
-option(BUILD_WITH_FMT "Build with Frequency Measurement Toolkit support" OFF)
-option(BUILD_KERNEL_DEBUG "Build CUDA kernels in debug mode")
-
 if(BUILD_WITH_PMT)
-  set(PMT_BUILD_NVML ON)
-  set(PMT_BUILD_TEGRA ON)
+  if(BUILD_WITH_HIP)
+    set(PMT_BUILD_ROCM ON)
+  else()
+    set(PMT_BUILD_NVML ON)
+    set(PMT_BUILD_TEGRA ON)
+  endif()
   FetchContent_Declare(pmt GIT_REPOSITORY https://git.astron.nl/RD/pmt)
   FetchContent_MakeAvailable(pmt)
   add_compile_definitions("HAVE_PMT")
 endif()
 
 if(BUILD_WITH_FMT)
-  set(FMT_BUILD_NVIDIA ON)
+  if(BUILD_WITH_HIP)
+    set(FMT_BUILD_AMD ON)
+  else()
+    set(FMT_BUILD_NVIDIA ON)
+  endif()
   FetchContent_Declare(
     fmt
     GIT_REPOSITORY https://git.astron.nl/RD/fmt
@@ -50,6 +65,10 @@ endif()
 file(GLOB CUDA_SOURCES *.cu)
 list(REMOVE_ITEM CUDA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/common.cu)
 
+if(BUILD_WITH_HIP)
+  set(CUDA_SOURCES dmem.cu fp32.cu mma.cu)
+endif()
+
 add_library(common OBJECT common.cpp common.cu)
 target_link_libraries(common cxxopts cudawrappers::cu)
 if(BUILD_WITH_PMT)
@@ -58,6 +77,14 @@ endif()
 if(BUILD_WITH_FMT)
   target_link_libraries(common fmt)
 endif()
+if(BUILD_WITH_PMT OR BUILD_WITH_FMT)
+  find_package(Threads)
+  target_link_libraries(common Threads::Threads)
+endif()
+if(BUILD_WITH_HIP)
+  set_source_files_properties(common.cpp PROPERTIES LANGUAGE HIP)
+  set_source_files_properties(common.cu PROPERTIES LANGUAGE HIP)
+endif()
 
 foreach(source_file ${CUDA_SOURCES})
   get_filename_component(executable_name ${source_file} NAME_WE)
@@ -65,9 +92,13 @@ foreach(source_file ${CUDA_SOURCES})
   set(KERNEL_FILE "${CMAKE_SOURCE_DIR}/kernels/${kernel_file}")
   add_executable(${executable_name} ${source_file} ${KERNEL_FILE})
   target_link_libraries(${executable_name} common)
-  if(BUILD_KERNEL_DEBUG)
+  if(NOT BUILD_WITH_HIP AND BUILD_KERNEL_DEBUG)
     target_compile_options(
       ${executable_name} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>: -g
                                  --generate-line-info >)
+  endif()
+  if(BUILD_WITH_HIP)
+    set_source_files_properties(${source_file} PROPERTIES LANGUAGE HIP)
+    set_source_files_properties(${KERNEL_FILE} PROPERTIES LANGUAGE HIP)
   endif()
 endforeach()
