--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,13 +63,13 @@ if(BUILD_WITH_FMT)
 endif()
 
 file(GLOB CUDA_SOURCES *.cu)
-list(REMOVE_ITEM CUDA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/common.cu)
+list(REMOVE_ITEM CUDA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Benchmark.cu)
 
 if(BUILD_WITH_HIP)
   set(CUDA_SOURCES dmem.cu fp16.cu fp32.cu mma.cu)
 endif()
 
-add_library(common OBJECT common.cpp common.cu)
+add_library(common OBJECT Benchmark.cu common.cpp Measurement.cpp)
 target_link_libraries(common cxxopts cudawrappers::cu)
 if(BUILD_WITH_PMT)
   target_link_libraries(common pmt)
@@ -82,8 +82,9 @@ if(BUILD_WITH_PMT OR BUILD_WITH_FMT)
   target_link_libraries(common Threads::Threads)
 endif()
 if(BUILD_WITH_HIP)
+  set_source_files_properties(Benchmark.cu PROPERTIES LANGUAGE HIP)
   set_source_files_properties(common.cpp PROPERTIES LANGUAGE HIP)
-  set_source_files_properties(common.cu PROPERTIES LANGUAGE HIP)
+  set_source_files_properties(Measurement.cpp PROPERTIES LANGUAGE HIP)
 endif()
 
 foreach(source_file ${CUDA_SOURCES})
