--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@
 stages:
   - linting
   - build
+  - build-optional
 
 format:
   stage: linting
@@ -14,7 +15,7 @@ format:
     - pre-commit run -a
 
 .build_cuda_template: &build_cuda_template
-  stage: build
+  image: $CUDA_IMAGE
   before_script:
     - apt update -y && apt install -y cmake git
   script:
@@ -23,41 +24,71 @@ format:
         make -C build-$arch -j;
       done
 
-build_cuda_12_6_3:
-  <<: *build_cuda_template
-  image: nvidia/cuda:12.6.3-devel-ubuntu22.04
-  variables:
-    CUDA_ARCHITECTURES: "86 89 90"
-
-build_cuda_12_8_1:
-  <<: *build_cuda_template
-  image: nvidia/cuda:12.8.1-devel-ubuntu24.04
-  variables:
-    CUDA_ARCHITECTURES: "86 89 90 120"
-
 .build_rocm_template: &build_rocm_template
-  stage: build
+  image: $ROCM_IMAGE
   before_script:
     - apt update -qq
     - apt install -y cmake git hipfft-dev rocwmma-dev
   script:
-    - for arch in gfx1101 gfx90a gfx940; do
+    - for arch in $ROCM_ARCHITECTURES; do
         cmake -S . -B build-$arch -DBUILD_WITH_HIP=1 -DCMAKE_HIP_ARCHITECTURES=$arch &&
         make -C build-$arch -j;
       done
 
-build_rocm_6_1_2:
-  <<: *build_rocm_template
-  image: rocm/dev-ubuntu-22.04:6.1.2
+build-cuda:
+  stage: build
+  extends:
+    - .build_cuda_template
+  needs:
+    - format
+  parallel:
+    matrix:
+      - CUDA_IMAGE: "nvidia/cuda:12.8.1-devel-ubuntu24.04"
+        CUDA_ARCHITECTURES: "86 89 90 120"
+        CUDA_VERSION: "12_8_1"
+  when: always
 
-build_rocm_6_2_4:
-  <<: *build_rocm_template
-  image: rocm/dev-ubuntu-24.04:6.2.4
+build-cuda-optional:
+  stage: build-optional
+  extends:
+    - .build_cuda_template
+  needs:
+    - build-cuda
+  parallel:
+    matrix:
+      - CUDA_IMAGE: "nvidia/cuda:12.6.3-devel-ubuntu22.04"
+        CUDA_ARCHITECTURES: "86 89 90"
+        CUDA_VERSION: "12_6_3"
+  when: manual
 
-build_rocm_6_3_4:
-  <<: *build_rocm_template
-  image: rocm/dev-ubuntu-24.04:6.3.4
+build-rocm:
+  stage: build
+  extends:
+    - .build_rocm_template
+  needs:
+    - format
+  parallel:
+    matrix:
+      - ROCM_IMAGE: "rocm/dev-ubuntu-24.04:6.4"
+        ROCM_ARCHITECTURES: "gfx1101 gfx90a gfx940"
+        ROCM_VERSION: "6_4"
+  when: always
 
-build_rocm_6_4:
-  <<: *build_rocm_template
-  image: rocm/dev-ubuntu-24.04:6.4
+build-rocm-optional:
+  stage: build-optional
+  extends:
+    - .build_rocm_template
+  needs:
+    - build-rocm
+  parallel:
+    matrix:
+      - ROCM_IMAGE: "rocm/dev-ubuntu-24.04:6.3.4"
+        ROCM_ARCHITECTURES: "gfx1101 gfx90a gfx940"
+        ROCM_VERSION: "6_3_4"
+      - ROCM_IMAGE: "rocm/dev-ubuntu-24.04:6.2.4"
+        ROCM_ARCHITECTURES: "gfx1101 gfx90a gfx940"
+        ROCM_VERSION: "6_2_4"
+      - ROCM_IMAGE: "rocm/dev-ubuntu-22.04:6.1.2"
+        ROCM_ARCHITECTURES: "gfx1101 gfx90a gfx940"
+        ROCM_VERSION: "6_1_2"
+  when: manual
