--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,81 +14,7 @@ format:
   script:
     - pre-commit run -a
 
-.build_cuda_template: &build_cuda_template
-  image: $CUDA_IMAGE
-  before_script:
-    - apt update -y && apt install -y cmake git
-  script:
-    - for arch in $CUDA_ARCHITECTURES; do
-        cmake -S . -B build-$arch -DCMAKE_CUDA_ARCHITECTURES=$arch &&
-        make -C build-$arch -j;
-      done
 
-.build_rocm_template: &build_rocm_template
-  image: $ROCM_IMAGE
-  before_script:
-    - apt update -qq
-    - apt install -y cmake git hipfft-dev rocwmma-dev
-  script:
-    - for arch in $ROCM_ARCHITECTURES; do
-        cmake -S . -B build-$arch -DBUILD_WITH_HIP=1 -DCMAKE_HIP_ARCHITECTURES=$arch &&
-        make -C build-$arch -j;
-      done
-
-build-cuda:
-  stage: build
-  extends:
-    - .build_cuda_template
-  needs:
-    - format
-  parallel:
-    matrix:
-      - CUDA_IMAGE: "nvidia/cuda:12.8.1-devel-ubuntu24.04"
-        CUDA_ARCHITECTURES: "86 89 90 120"
-        CUDA_VERSION: "12_8_1"
-  when: always
-
-build-cuda-optional:
-  stage: build-optional
-  extends:
-    - .build_cuda_template
-  needs:
-    - build-cuda
-  parallel:
-    matrix:
-      - CUDA_IMAGE: "nvidia/cuda:12.6.3-devel-ubuntu22.04"
-        CUDA_ARCHITECTURES: "86 89 90"
-        CUDA_VERSION: "12_6_3"
-  when: manual
-
-build-rocm:
-  stage: build
-  extends:
-    - .build_rocm_template
-  needs:
-    - format
-  parallel:
-    matrix:
-      - ROCM_IMAGE: "rocm/dev-ubuntu-24.04:6.4"
-        ROCM_ARCHITECTURES: "gfx1101 gfx90a gfx940"
-        ROCM_VERSION: "6_4"
-  when: always
-
-build-rocm-optional:
-  stage: build-optional
-  extends:
-    - .build_rocm_template
-  needs:
-    - build-rocm
-  parallel:
-    matrix:
-      - ROCM_IMAGE: "rocm/dev-ubuntu-24.04:6.3.4"
-        ROCM_ARCHITECTURES: "gfx1101 gfx90a gfx940"
-        ROCM_VERSION: "6_3_4"
-      - ROCM_IMAGE: "rocm/dev-ubuntu-24.04:6.2.4"
-        ROCM_ARCHITECTURES: "gfx1101 gfx90a gfx940"
-        ROCM_VERSION: "6_2_4"
-      - ROCM_IMAGE: "rocm/dev-ubuntu-22.04:6.1.2"
-        ROCM_ARCHITECTURES: "gfx1101 gfx90a gfx940"
-        ROCM_VERSION: "6_1_2"
-  when: manual
+include:
+  - .gitlab-ci-cuda.yml
+  - .gitlab-ci-rocm.yml
