First stage in refactoring the code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ option(BUILD_WITH_HIP "Build with HIP")
 if(BUILD_WITH_HIP)
   set(CUDAWRAPPERS_BACKEND "HIP")
   enable_language(HIP)
+  add_compile_definitions("__HIP__")
 else()
   find_package(CUDAToolkit REQUIRED)
   enable_language(CUDA)
@@ -63,14 +64,17 @@ if(BUILD_WITH_FMT)
 endif()
 
 file(GLOB CUDA_SOURCES *.cu)
-list(REMOVE_ITEM CUDA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Benchmark.cu)
+list(REMOVE_ITEM CUDA_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/launch.cu")
+list(REMOVE_ITEM CUDA_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/launch_stream.cu")
 
 if(BUILD_WITH_HIP)
   set(CUDA_SOURCES dmem.cu fp16.cu fp32.cu mma.cu stream.cu)
 endif()
 
-add_library(common OBJECT Benchmark.cu common.cpp Measurement.cpp)
+add_library(launch OBJECT launch.cu)
+add_library(common OBJECT Benchmark.cpp common.cpp Measurement.cpp)
 target_link_libraries(common cxxopts cudawrappers::cu)
+target_link_libraries(launch cudawrappers::cu)
 if(BUILD_WITH_PMT)
   target_link_libraries(common pmt)
 endif()
@@ -82,9 +86,7 @@ if(BUILD_WITH_PMT OR BUILD_WITH_FMT)
   target_link_libraries(common Threads::Threads)
 endif()
 if(BUILD_WITH_HIP)
-  set_source_files_properties(Benchmark.cu PROPERTIES LANGUAGE HIP)
-  set_source_files_properties(common.cpp PROPERTIES LANGUAGE HIP)
-  set_source_files_properties(Measurement.cpp PROPERTIES LANGUAGE HIP)
+  set_source_files_properties(launch.cu PROPERTIES LANGUAGE HIP)
 endif()
 
 foreach(source_file ${CUDA_SOURCES})
@@ -92,7 +94,7 @@ foreach(source_file ${CUDA_SOURCES})
   get_filename_component(kernel_file ${source_file} NAME)
   set(KERNEL_FILE "${CMAKE_SOURCE_DIR}/kernels/${kernel_file}")
   add_executable(${executable_name} ${source_file} ${KERNEL_FILE})
-  target_link_libraries(${executable_name} common)
+  target_link_libraries(${executable_name} common launch)
   if(NOT BUILD_WITH_HIP AND BUILD_KERNEL_DEBUG)
     target_compile_options(
       ${executable_name} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>: -g
@@ -103,3 +105,9 @@ foreach(source_file ${CUDA_SOURCES})
     set_source_files_properties(${KERNEL_FILE} PROPERTIES LANGUAGE HIP)
   endif()
 endforeach()
+
+set(SOURCE_FILE "${CMAKE_SOURCE_DIR}/launch_stream.cu")
+target_sources(stream PRIVATE ${SOURCE_FILE})
+if(BUILD_WITH_HIP)
+  set_source_files_properties(${SOURCE_FILE} PROPERTIES LANGUAGE HIP)
+endif()
