--- a/.github/workflows/build-optional.yml
+++ b/.github/workflows/build-optional.yml
@@ -1,15 +1,16 @@
-name: build
+name: build-optional
 on:
-  push:
+  workflow_dispatch:
 jobs:
   build-cuda:
-    name: CUDA ${{ matrix.CUDA_IMAGE }} (arch ${{ matrix.CUDA_ARCH }})
+    name: ${{ matrix.CUDA_IMAGE }} (arch ${{ matrix.CUDA_ARCH }})
     runs-on: [docker]
     strategy:
       matrix:
-        CUDA_IMAGE: ["nvidia/cuda:12.8.1-devel-ubuntu24.04"]
-        CUDA_ARCH: ["80", "86", "89", "90", "120"]
+        CUDA_IMAGE: ["nvidia/cuda:12.6.3-devel-ubuntu22.04"]
+        CUDA_ARCH: ["80", "86", "89", "90"]
     container: ${{ matrix.CUDA_IMAGE }}
+    on: workflow_dispatch
     steps:
       - uses: actions/checkout@v4
       - run: apt-get update && apt-get install -y cmake git
@@ -20,9 +21,10 @@ jobs:
     runs-on: [docker]
     strategy:
       matrix:
-        ROCM_IMAGE: ["rocm/dev-ubuntu-24.04:6.4"]
+        ROCM_IMAGE: ["rocm/dev-ubuntu-22.04:6.1.2", "rocm/dev-ubuntu-24.04:6.2.4", "rocm/dev-ubuntu-24.04:6.3.4"]
         ROCM_ARCH: ["gfx1101", "gfx90a", "gfx940"]
     container: ${{ matrix.ROCM_IMAGE }}
+    on: workflow_dispatch
     steps:
       - uses: actions/checkout@v4
       - run: apt-get update && apt-get install -y cmake git hipfft-dev rocwmma-dev
