--- a/.github/workflows/test-optional.yml
+++ b/.github/workflows/test-optional.yml
@@ -1,36 +1,40 @@
-name: test
+name: test-optional
 on:
-  push:
+  workflow_dispatch:
 jobs:
-  test-a4000:
-    name: NVIDIA A4000
+  test-a100:
+    name: NVIDIA A100
     runs-on: [slurm]
+    on: workflow_dispatch
     steps:
       - uses: actions/checkout@v4
       - uses: astron-rd/slurm-action@v1
         with:
           partition: defq
-          gres: gpu:A4000
+          gres: gpu:A100
           time: "00:10:00"
           commands: |
             module load spack/20250403
             module load cuda
-            cmake -S . -B build -DCMAKE_CUDA_ARCHITECTURES=86
+            cmake -S . -B build -DCMAKE_CUDA_ARCHITECTURES=80
             make -C build -j
             ./build/benchmarks/fp32
             ./build/benchmarks/mma
-  slurm-w7700:
-    name: AMD W7700
+  test-ad4000:
+    name: NVIDIA AD4000
     runs-on: [slurm]
+    on: workflow_dispatch
     steps:
       - uses: actions/checkout@v4
       - uses: astron-rd/slurm-action@v1
         with:
-          partition: defq
-          gres: gpu:W7700
+          partition: fatq
+          gres: gpu:AD4000
           time: "00:10:00"
           commands: |-
-            cmake -S . -B build -DBUILD_WITH_HIP=1 -DCMAKE_HIP_ARCHITECTURES=gfx1101
+            module load spack/20250403
+            module load cuda
+            cmake -S . -B build -DCMAKE_CUDA_ARCHITECTURES=89
             make -C build -j
             ./build/benchmarks/fp32
             ./build/benchmarks/mma
