--- a/.github/workflows/test-optional.yml
+++ b/.github/workflows/test-optional.yml
@@ -1,11 +1,22 @@
 name: test-optional
 on:
   workflow_dispatch:
+    inputs:
+      run_a100:
+        description: 'Run NVIDIA A100 test'
+        required: false
+        default: 'false'
+        type: boolean
+      run_ad4000:
+        description: 'Run NVIDIA AD4000 test'
+        required: false
+        default: 'false'
+        type: boolean
 jobs:
   test-a100:
     name: NVIDIA A100
     runs-on: [slurm]
-    on: workflow_dispatch
+    if: ${{ github.event.inputs.run_a100 == 'true' }}
     steps:
       - uses: actions/checkout@v4
       - uses: astron-rd/slurm-action@v1
@@ -14,16 +25,18 @@ jobs:
           gres: gpu:A100
           time: "00:10:00"
           commands: |
+            BUILD_DIR="build-${GITHUB_RUN_ID}"
             module load spack/20250403
             module load cuda
-            cmake -S . -B build -DCMAKE_CUDA_ARCHITECTURES=80
-            make -C build -j
-            ./build/benchmarks/fp32
-            ./build/benchmarks/mma
+            cmake -S . -B ${BUILD_DIR} -DCMAKE_CUDA_ARCHITECTURES=80
+            make -C ${BUILD_DIR} -j
+            ./${BUILD_DIR}/benchmarks/fp32
+            ./${BUILD_DIR}/benchmarks/mma
+            rm -rf ${BUILD_DIR}
   test-ad4000:
     name: NVIDIA AD4000
     runs-on: [slurm]
-    on: workflow_dispatch
+    if: ${{ github.event.inputs.run_ad4000 == 'true' }}
     steps:
       - uses: actions/checkout@v4
       - uses: astron-rd/slurm-action@v1
@@ -32,9 +45,11 @@ jobs:
           gres: gpu:AD4000
           time: "00:10:00"
           commands: |-
+            BUILD_DIR="build-${GITHUB_RUN_ID}"
             module load spack/20250403
             module load cuda
-            cmake -S . -B build -DCMAKE_CUDA_ARCHITECTURES=89
-            make -C build -j
-            ./build/benchmarks/fp32
-            ./build/benchmarks/mma
+            cmake -S . -B ${BUILD_DIR} -DCMAKE_CUDA_ARCHITECTURES=89
+            make -C ${BUILD_DIR} -j
+            ./${BUILD_DIR}/benchmarks/fp32
+            ./${BUILD_DIR}/benchmarks/mma
+            rm -rf ${BUILD_DIR}
