--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
           gres: gpu:A4000
           time: "00:10:00"
           commands: |
-            BUILD_DIR="build-${GITHUB_RUN_ID}"
+            BUILD_DIR=$(mktemp -d -t build-XXXXXXXX)
             module load spack/20250403
             module load cuda
             cmake -S . -B ${BUILD_DIR} -DCMAKE_CUDA_ARCHITECTURES=86
@@ -31,7 +31,7 @@ jobs:
           gres: gpu:W7700
           time: "00:10:00"
           commands: |-
-            BUILD_DIR="build-${GITHUB_RUN_ID}"
+            BUILD_DIR=$(mktemp -d -t build-XXXXXXXX)
             module load rocm
             cmake -S . -B ${BUILD_DIR} -DBUILD_WITH_HIP=1 -DCMAKE_HIP_ARCHITECTURES=gfx1101
             make -C ${BUILD_DIR} -j
