Remove ./ suffix for BUILD_DIR

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,8 @@ jobs:
             module load cuda
             cmake -S . -B ${BUILD_DIR} -DCMAKE_CUDA_ARCHITECTURES=86
             make -C ${BUILD_DIR} -j
-            ./${BUILD_DIR}/benchmarks/fp32
-            ./${BUILD_DIR}/benchmarks/mma
+            ${BUILD_DIR}/benchmarks/fp32
+            ${BUILD_DIR}/benchmarks/mma
   test-w7700:
     name: AMD W7700
     runs-on: [slurm]
@@ -34,5 +34,5 @@ jobs:
             BUILD_DIR=$(mktemp -d -t build-XXXXXXXX)
             cmake -S . -B ${BUILD_DIR} -DBUILD_WITH_HIP=1 -DCMAKE_HIP_ARCHITECTURES=gfx1101
             make -C ${BUILD_DIR} -j
-            ./${BUILD_DIR}/benchmarks/fp32
-            ./${BUILD_DIR}/benchmarks/mma
+            ${BUILD_DIR}/benchmarks/fp32
+            ${BUILD_DIR}/benchmarks/mma
