--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,7 @@ jobs:
           gres: gpu:W7700
           time: "00:10:00"
           commands: |-
-            cmake -S . -B build -DBUILD_WITH_HIP=1 -DCMAKE_HIP_ARCHITECTURES=gfx1101
+            PATH=$PATH:/opt/rocm/bin cmake -S . -B build -DBUILD_WITH_HIP=1 -DCMAKE_HIP_ARCHITECTURES=gfx1101
             make -C build -j
             ./build/benchmarks/fp32
             ./build/benchmarks/mma
