--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -7,6 +7,7 @@ endif()
 foreach(source_file ${BENCHMARK_SOURCES})
   get_filename_component(EXECUTABLE_NAME ${source_file} NAME_WE)
   get_filename_component(kernel_file ${EXECUTABLE_NAME}.cu NAME)
+  string(REPLACE "_" "-" EXECUTABLE_NAME ${EXECUTABLE_NAME})
   set(EXECUTABLE_NAME "benchmark-${EXECUTABLE_NAME}")
   add_executable(${EXECUTABLE_NAME} ${source_file})
   target_include_directories(${EXECUTABLE_NAME} PRIVATE ${CMAKE_SOURCE_DIR})
