--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,10 +17,10 @@ jobs:
             source /etc/profile
             module load spack/d4468dcc
             module load cmake cuda
-            cmake -S . -B ${BUILD_DIR} -DCMAKE_CUDA_ARCHITECTURES=70
+            cmake -S . -B ${BUILD_DIR}
             make -C ${BUILD_DIR} -j
-            ${BUILD_DIR}/benchmarks/fp32
-            ${BUILD_DIR}/benchmarks/mma
+            ${BUILD_DIR}/benchmarks/benchmark-fp32
+            ${BUILD_DIR}/benchmarks/benchmark-mma
   test-a4000:
     name: NVIDIA A4000
     runs-on: [slurm]
@@ -34,10 +34,10 @@ jobs:
           commands: |
             module load spack/20250403
             module load cuda
-            cmake -S . -B build -DCMAKE_CUDA_ARCHITECTURES=86
+            cmake -S . -B build
             make -C build -j
-            ./build/benchmarks/fp32
-            ./build/benchmarks/mma
+            ./build/benchmarks/benchmark-fp32
+            ./build/benchmarks/benchmark-mma
   test-w7700:
     name: AMD W7700
     runs-on: [slurm]
@@ -49,7 +49,7 @@ jobs:
           gres: gpu:W7700
           time: "00:10:00"
           commands: |-
-            PATH=$PATH:/opt/rocm/bin cmake -S . -B build -DBUILD_WITH_HIP=1 -DCMAKE_HIP_ARCHITECTURES=gfx1101
+            PATH=$PATH:/opt/rocm/bin cmake -S . -B build -DBUILD_WITH_HIP=1
             make -C build -j
-            ./build/benchmarks/fp32
-            ./build/benchmarks/mma
+            ./build/benchmarks/benchmark-fp32
+            ./build/benchmarks/benchmark-mma
