Set position independent code in HIP mode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ if(BUILD_WITH_HIP)
   set(CUDAWRAPPERS_BACKEND "HIP")
   enable_language(HIP)
   add_compile_definitions("__HIP__")
+  set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 else()
   find_package(CUDAToolkit REQUIRED)
 endif()
