--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,54 +2,48 @@ name: test
 on:
   push:
 jobs:
-  test-v100:
-    name: NVIDIA V100
+  test-gpu:
     runs-on: [slurm]
+    strategy:
+      matrix:
+        include:
+          - name: NVIDIA V100
+            partition: cbtq
+            gres: gpu:V100
+          - name: NVIDIA A4000
+            partition: defq
+            gres: gpu:A4000
+          - name: AMD W7700
+            partition: defq
+            gres: gpu:W7700
+    env:
+      DEVICE_NAME: ${{ matrix.name }}
+      PARTITION_NAME: ${{ matrix.partition }}
     steps:
       - uses: actions/checkout@v4
       - uses: astron-rd/slurm-action@v1
         with:
-          partition: cbtq
-          gres: gpu:V100
+          partition: ${{ matrix.partition }}
+          gres: ${{ matrix.gres }}
           time: "00:10:00"
           commands: |
             BUILD_DIR=$(mktemp -d -t build-XXXXXXXX)
-            source /etc/profile
-            module load spack/d4468dcc
-            module load cmake cuda
-            cmake -S . -B ${BUILD_DIR} -DCMAKE_CUDA_ARCHITECTURES=70
+            if [[ "$PARTITION_NAME" == cbtq ]]; then
+              source /etc/profile.d/modules.sh
+              module load spack/d4468dcc
+            else
+              module load spack/20250403
+            fi
+            if [[ "$DEVICE_NAME" == NVIDIA* ]]; then
+              module load cuda
+              cmake_flags=""
+              append_path=""
+            else
+              cmake_flags="-DBUILD_WITH_HIP=1"
+              append_path="/opt/rocm/bin"
+            fi
+            module load cmake
+            PATH=$PATH:${append_path} cmake -S . -B ${BUILD_DIR} ${cmake_flags}
             make -C ${BUILD_DIR} -j
-            ${BUILD_DIR}/benchmarks/fp32
-            ${BUILD_DIR}/benchmarks/mma
-  test-a4000:
-    name: NVIDIA A4000
-    runs-on: [slurm]
-    steps:
-      - uses: actions/checkout@v4
-      - uses: astron-rd/slurm-action@v1.1
-        with:
-          partition: defq
-          gres: gpu:A4000
-          time: "00:10:00"
-          commands: |
-            module load spack/20250403
-            module load cuda
-            cmake -S . -B build -DCMAKE_CUDA_ARCHITECTURES=86
-            make -C build -j
-            ./build/benchmarks/fp32
-            ./build/benchmarks/mma
-  test-w7700:
-    name: AMD W7700
-    runs-on: [slurm]
-    steps:
-      - uses: actions/checkout@v4
-      - uses: astron-rd/slurm-action@v1.1
-        with:
-          partition: defq
-          gres: gpu:W7700
-          time: "00:10:00"
-          commands: |-
-            PATH=$PATH:/opt/rocm/bin cmake -S . -B build -DBUILD_WITH_HIP=1 -DCMAKE_HIP_ARCHITECTURES=gfx1101
-            make -C build -j
-            ./build/benchmarks/fp32
-            ./build/benchmarks/mma
+            ${BUILD_DIR}/benchmarks/benchmark-fp32
+            ${BUILD_DIR}/benchmarks/benchmark-mma
