Add missing linking of FMT

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -13,6 +13,9 @@ foreach(source_file ${BENCHMARK_SOURCES})
   if(BUILD_WITH_PMT)
     target_link_libraries(${EXECUTABLE_NAME} PRIVATE pmt Threads::Threads)
   endif()
+  if(BUILD_WITH_FMT)
+    target_link_libraries(${EXECUTABLE_NAME} PRIVATE fmt Threads::Threads)
+  endif()
   set(KERNEL_FILE "${CMAKE_SOURCE_DIR}/kernels/${kernel_file}")
   target_embed_source(${EXECUTABLE_NAME} ${KERNEL_FILE})
 endforeach()
