Switch to NVML to be able to pass cu::Device

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ if(BUILD_WITH_PMT)
     set(PMT_BUILD_NVML ON)
     set(PMT_BUILD_TEGRA ON)
   endif()
+  set(PMT_NVML_CUDAWRAPPERS_API ON)
   FetchContent_Declare(pmt GIT_REPOSITORY https://git.astron.nl/RD/pmt)
   FetchContent_MakeAvailable(pmt)
   add_compile_definitions("HAVE_PMT")
