--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -11,10 +11,10 @@ foreach(source_file ${BENCHMARK_SOURCES})
     ${EXECUTABLE_NAME} PRIVATE $<TARGET_OBJECTS:common> cudawrappers::cu
                                cudawrappers::nvrtc cxxopts)
   if(BUILD_WITH_PMT)
-    target_link_libraries(${EXECUTABLE_NAME} PRIVATE pmt Threads::Threads)
+    target_link_libraries(${EXECUTABLE_NAME} PRIVATE pmt)
   endif()
   if(BUILD_WITH_FMT)
-    target_link_libraries(${EXECUTABLE_NAME} PRIVATE fmt Threads::Threads)
+    target_link_libraries(${EXECUTABLE_NAME} PRIVATE fmt)
   endif()
   set(KERNEL_FILE "${CMAKE_SOURCE_DIR}/kernels/${kernel_file}")
   target_embed_source(${EXECUTABLE_NAME} ${KERNEL_FILE})
