--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -11,7 +11,8 @@ foreach(source_file ${BENCHMARK_SOURCES})
     ${EXECUTABLE_NAME} PRIVATE $<TARGET_OBJECTS:common> cudawrappers::cu
                                cudawrappers::nvrtc cxxopts)
   if(BUILD_WITH_PMT)
-    target_link_libraries(${EXECUTABLE_NAME} PRIVATE pmt)
+    find_package(Threads REQUIRED)
+    target_link_libraries(${EXECUTABLE_NAME} PRIVATE pmt Threads::Threads)
   endif()
   if(BUILD_WITH_FMT)
     target_link_libraries(${EXECUTABLE_NAME} PRIVATE fmt)
